--- a/FundamentosTestes/FundamentosTestes/Properties/launchSettings.json
+++ b/FundamentosTestes/FundamentosTestes/Properties/launchSettings.json
@@ -12,13 +12,13 @@
     },
     "https": {
       "commandName": "Project",
+      "dotnetRunMessages": true,
       "launchBrowser": true,
       "launchUrl": "swagger",
+      "applicationUrl": "https://localhost:7033;http://localhost:5285",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
-      },
-      "dotnetRunMessages": true,
-      "applicationUrl": "https://localhost:7033;http://localhost:5285"
+      }
     },
     "IIS Express": {
       "commandName": "IISExpress",
