--- a/FundamentosTestes/FundamentosTestes/FundamentosTestes.csproj
+++ b/FundamentosTestes/FundamentosTestes/FundamentosTestes.csproj
@@ -25,4 +25,11 @@
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.6.2" />
   </ItemGroup>
 
+  <ItemGroup>
+    <AssemblyAttribute Include="System.Runtime.CompilerServices.InternalsVisibleTo">
+      <_Parameter1>$(AssemblyName).Tests</_Parameter1>
+    </AssemblyAttribute>
+  </ItemGroup>
+
+
 </Project>
